--- a/style.css
+++ b/style.css
@@ -1,32 +1,52 @@
-body{
-	background-color: #cceeff;
-	font-size: 62.5%;
-}
-h1{
-	font: 30px Helvetica;
-	width: 25%;
-	text-align: center;
-	background: -webkit-linear-gradient(left,#6699ff,#003399);
-	background: -moz-linear-gradient(left,#6699ff,#003399);
-	background: -o-linear-gradient(left,#6699ff,#003399);
-	background: -ms-linear-gradient(left,#6699ff,#003399);
-	margin: 15px auto;
-	padding: 15px;
-	border-radius: 20px;
-	color: #e6f0ff;
-	box-shadow: #003380 5px 5px 8px;
-	text-shadow: #001433 3px 3px 6px;
-}
-
-h2{
-	font: bold 17px Verdana, Geneva, sans-serif;
+*{
 	margin: 0;
-	padding-top: 15px;
+	padding: 0;
 }
-section{
-	width: 91%;
-	border-top: 1px dashed #0047b3;
-	margin: 15px auto;
+body{
+	background:  #404040;
+}
+.principal{
+	width: 100%;
+	height: 70px;
+	background-color: rgba(0,0,0,0.5);
+}
+.ancho{
+	width: 80%;
+	height: 70px;
+	margin: auto;
+	/*background: #99ccff;*/
+}
+.ancho h1{
+	width: 40%;
+	height: 70px;
+	color: #bfbfbf;
+	text-align: center;
+	/*background: #ff99cc;*/
+	float: left;
+	box-sizing: border-box;
+	padding-top: 10px;
+	font-size: 40px;
+	font-family: 'Raleway', sans-serif;
+}
+.ancho h2{
+	width: 60%;
+	height: 70px;
+	color: #ff1a1a;
+	text-align: center;
+	font-size: 50px;
+	/*background: #99ff66;*/
+	float: left;
+	box-sizing: border-box;
+	font-family: 'Anton', sans-serif;
+}
+.wap{
+	width: 90%;
+	height: 300px;
+	margin: auto;
+	background: -webkit-linear-gradient(right, #ffb380, #ff3300);
+	background: -o-linear-gradient(right, #ffb380, #ff3300);
+	background: -moz-linear-gradient(right, #ffb380, #ff3300);
+	background: -ms-linear-gradient(right, #ffb380, #ff3300);
 }
 figure{
 	float: left;
@@ -34,13 +54,15 @@ figure{
 }
 figure img{
 	width: 160px;
+	height: 180px;
+	margin-top: 10px;
+	border-radius: 20px;
 	padding: 4px;
 	background: #333333;
-	border-radius: 20px;
-	-webkit-transition:-webkit-transform 0.3s ease-in-out 0.1s;
-	-moz-transition:-moz-transform 0.3s ease-in-out 0.1s;
-	-o-transition:-o-transform 0.3s ease-in-out 0.1s;
-	-ms-transition:-ms-transform 0.3s ease-in-out 0.1s;
+	-webkit-transition:-webkit-transform 0.2s ease-in-out 0.1s;
+	-moz-transition:-moz-transform 0.2s ease-in-out 0.1s;
+	-o-transition:-o-transform 0.2s ease-in-out 0.1s;
+	-ms-transition:-ms-transform 0.2s ease-in-out 0.1s;
 	box-shadow: #4d4d4d 3px 3px 8px;
 }
 figure img:hover{
@@ -50,17 +72,25 @@ figure img:hover{
 	-ms-transform:scale(1.2);
 }
 figcaption{
-	/*font-family: Arial;*/
-	font-size: 1.2em;
+	font-family: 'B612', sans-serif;
+	/*background: #66ffff;*/
+	padding: 5px;
+	font-size: 18px;
+	background: #737373;
 	text-align: center;
-	margin-top: 5px;
+	margin-top: 15px;
+	color: #bfbfbf;
+	border: 2px solid #666666;
+	box-shadow: #cc2900 5px 5px 8px;
 }
 footer{
-	clear: both;
-	padding-top: 100px;
+	margin-top: 247px;
 }
 footer p{
+	padding: 10px;
 	font-size: 15px;
-	color: #595959;
-	margin-left: 30px;
+	color: #ffffff;
+	text-align: center;
+	margin: auto;
+	background: #333333;
 }
